# TheMaritimePilot

./: .env  Cargo.toml  Makefile  README.md  Tokio.md  docker-compose.yml  dockerfile
migrations/2023-08-11-230159_create_users/: up.sql
src/: api.rs  db.rs  main.rs  model.rs  schema.rs  util.rs  validate.rs
src/migrations/2023-08-07-180000_add_users/: up.sql
