[package]
name = "maritime_pilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axiom = "0.2.1"
axum = "0.6.20"
bcrypt = "0.15.0"
cookie = "0.17.0"
csrf = "0.4.1"
diesel = "2.1.0"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
log = "0.4.19"
serde_json = "1.0.104"
valico = "4.0.0"
