[package]
name = "maritime_pilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bcrypt = "0.15.0"
cookie = "0.17.0"
csrf = "0.4.1"
deadpool-diesel = {version = "0.4.1", features = ["postgres"]}
diesel = { version = "2.1.0", features = ["postgres"]}
diesel_migrations = { version = "2.1.0", features = ["postgres"]}
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
serde = "1.0.183"
tokio = {version = "1.29.1", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
valico = "4.0.0"
